@@ -12,6 +12,14 @@ fwknop-2.5 (//2013):
       key from the passphrase through a series of applications of md5 against
       the passphrase and a random salt.  This issue was reported by Michael T.
       Dean.  Closes issue #18 on github.
+    - [test suite] Added --enable-openssl-checks to send all SPA packets
+      encrypted via libfko through the OpenSSL library to ensure that the
+      libfko usage of AES is always compatible with OpenSSL.  This ensures
+      that the fwknop usage of AES is properly implemented as verified by the
+      OpenSSL library, which is a frequently audited high profile crypto
+      engine.  If a vulnerability is discovered in OpenSSL and a change is
+      made, then the --enable-openssl-checks mode will allow the test suite to
+      discover this in a automated fashion for fwknop.
     - (Vlad Glagolev) Submitted an OpenBSD port for fwknop-2.0.4, and this has
       been checked in under the extras/openbsd/fwknop-2.0.4 directory.
 
